[tool.poetry]
name = "api-sandbox"
version = "0.1.0"
description = ""
authors = ["gradiuscypher <gradiuscypher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
httpx = "^0.26.0"
typer = "^0.9.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cli = "cli.cli:app"
api = "api.api:main"
